--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/mainStyle.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/mainStyle.scss
@@ -17,8 +17,39 @@ body {
   background-color: $ltgreen;
 }
 
+.colorbar {
+  width: 100vw;
+  height: 50px;
+  background-color: linear-gradient(to bottom, $dkgreen, $mdgreen, $ltgreen);
+}
+
 header {
   display: flex;
+  width: 100vw;
+  background-color: $ltgreen;
+  color: $dkgreen;
+
+  #logo {
+    position: relative;
+    padding: 0px 0px 0px 5px;
+    height: 250px;
+    animation-name: logo;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+  }
+  @keyframes logo {
+    0% {
+      transform: rotate(12deg);
+      left: 18px;
+    }
+
+    100% {
+      transform: rotate(8deg);
+      left: 35px;
+    }
+  }
 }
 
 h1,
