--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_buttons.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_buttons.scss
@@ -1,5 +1,16 @@
 .btn {
   width: 100px;
   height: 50px;
+  cursor: pointer;
   background-color: $gold;
+  color: $brick;
+  letter-spacing: 0;
+
+  &:hover {
+    background-color: $dkgreen;
+    color: lighten($brick, 30%);
+    letter-spacing: 3px;
+    transform: scale(0.9);
+    transition: all 0.5s ease-in-out;
+  }
 }
