--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_header.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_header.scss
@@ -24,13 +24,20 @@
 header {
   display: flex;
   width: 100vw;
+  min-height: 10vh;
   background-color: $ltgreen;
   color: $dkgreen;
+  border-radius: 0 0 85% 85% / 30%;
+
+  image {
+    min-width: 10vw;
+  }
 
   #logo {
     position: relative;
     padding: 0px 0px 0px 5px;
-    height: 250px;
+    width: 100%;
+    height: auto;
     animation-name: logo;
     animation-duration: 2s;
     animation-iteration-count: infinite;
@@ -52,5 +59,28 @@ header {
   h1 {
     z-index: 2;
     font-weight: bold;
+    overflow-wrap: anywhere;
+  }
+  .typing-demo {
+    width: 24ch;
+    animation: typing 4s steps(24), blink 0.5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    word-wrap: break-word;
+    border-right: 3px solid;
+    font-family: monospace;
+    font-size: 2em;
+
+    @keyframes typing {
+      from {
+        width: 0;
+      }
+    }
+
+    @keyframes blink {
+      50% {
+        border-color: transparent;
+      }
+    }
   }
 }
