--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/mainStyle.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/mainStyle.scss
@@ -11,6 +11,11 @@
 
 html {
   line-height: 1.6;
+
+  //magic?
+  @media (max-width: 1200px) {
+    font-size: calc(10px + 0.2vw);
+  }
 }
 
 body {
