--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_footer.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_footer.scss
@@ -6,4 +6,9 @@ footer {
   margin-top: auto;
   bottom: 0;
   background-color: $dkgreen;
+  color: $gold;
+
+  p {
+    align-items: center;
+  }
 }
