--- a/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .btn {
   width: 100px;
   height: 50px;
@@ -93,7 +92,8 @@ header {
   header p {
     z-index: 5;
     font-weight: bold;
-    width: max-content; }
+    width: max-content;
+    letter-spacing: 0; }
   header .slide-in-fwd-center {
     -webkit-animation: slide-in-fwd-center 6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
     animation: slide-in-fwd-center 6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
@@ -105,6 +105,7 @@ header {
   100% {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
+    letter-spacing: 3px;
     opacity: 1; } }
 @keyframes slide-in-fwd-center {
   0% {
@@ -114,6 +115,7 @@ header {
   100% {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
+    letter-spacing: 3px;
     opacity: 1; } }
 footer {
   width: 100vw;
@@ -140,15 +142,31 @@ footer {
     transition: all 0.5s ease-in-out; }
 
 #myCarousel {
-  width: 70vw; }
-  #myCarousel .carousel-indicators {
-    border-radius: 50%; }
-  #myCarousel .carousel-item {
-    width: 100%;
-    height: 400px; }
-  #myCarousel .carousel-caption {
-    background-color: #e7f0eb;
-    color: #162f21; }
+  width: 500px;
+  box-shadow: inset black 10px 10px 40px; }
+
+.carousel-item {
+  height: 20rem;
+  position: relative; }
+
+.container {
+  position: absolute;
+  left: 200px;
+  top: 80px; }
+
+.overlay-image {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  top: 0;
+  background-position: center;
+  background-size: cover;
+  opacity: 1; }
+
+.carousel-caption {
+  color: #162f21;
+  background-color: #e7f0eb; }
 
 #myBtn {
   display: none;
