--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_carousel.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_carousel.scss
@@ -1,19 +1,32 @@
-@import "variables";
-
 #myCarousel {
-  width: 70vw;
+  width: 500px;
+  box-shadow: inset black 10px 10px 40px;
+}
 
-  .carousel-indicators {
-    border-radius: 50%;
-  }
+.carousel-item {
+  height: 20rem;
 
-  .carousel-item {
-    width: 100%;
-    height: 400px;
-  }
+  position: relative;
+}
 
-  .carousel-caption {
-    background-color: $ltgreen;
-    color: $dkgreen;
-  }
+.container {
+  position: absolute;
+  left: 200px;
+  top: 80px;
+}
+
+.overlay-image {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  top: 0;
+  background-position: center;
+  background-size: cover;
+  opacity: 1;
+}
+
+.carousel-caption {
+  color: $dkgreen;
+  background-color: $ltgreen;
 }
