--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_buttons.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_buttons.scss
@@ -7,7 +7,7 @@
   letter-spacing: 0;
 
   &:hover {
-    background-color: $dkgreen;
+    background-color: $brick;
     color: lighten($brick, 30%);
     letter-spacing: 3px;
     transform: scale(0.9);
