--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_carousel.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_carousel.scss
@@ -1,32 +1,20 @@
+@import "variables";
+
 #myCarousel {
-  width: 500px;
-  box-shadow: inset black 10px 10px 40px;
-}
+  width: 70vw;
 
-.carousel-item {
-  height: 20rem;
+  .carousel-indicators {
+    border-radius: 50%;
+  }
 
-  position: relative;
-}
+  .carousel-item {
+    width: 100%;
+    height: 400px;
+  }
 
-.container {
-  position: absolute;
-  left: 200px;
-  top: 80px;
-}
-
-.overlay-image {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  top: 0;
-  background-position: center;
-  background-size: cover;
-  opacity: 1;
-}
-
-.carousel-caption {
-  color: $dkgreen;
-  background-color: $ltgreen;
+  .carousel-caption {
+    padding: 5px;
+    color: $gold;
+    text-shadow: 1px 2px 2px $brick;
+  }
 }
