--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_header.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_header.scss
@@ -28,7 +28,7 @@ header {
   min-height: 10vh;
   background-color: $ltgreen;
   color: $dkgreen;
-  border-radius: 0 0 85% 85% / 30%;
+  // border-radius: 0 0 85% 85% / 30%;
 
   @media only screen and (max-width: 400px) {
     #logo {
@@ -139,7 +139,7 @@ header {
     100% {
       -webkit-transform: translateZ(0);
       transform: translateZ(0);
-      letter-spacing: 3px;
+      letter-spacing: 5px;
       opacity: 1;
     }
   }
@@ -152,7 +152,7 @@ header {
     100% {
       -webkit-transform: translateZ(0);
       transform: translateZ(0);
-      letter-spacing: 3px;
+      letter-spacing: 5px;
       opacity: 1;
     }
   }
