--- a/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
@@ -3,19 +3,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-.btn {
+.btn, .btn-ToC {
   width: 100px;
   height: 50px;
   cursor: pointer;
   background-color: #f8c925;
   color: #753205;
   letter-spacing: 0; }
-  .btn:hover {
+  .btn:hover, .btn-ToC:hover {
     background-color: #753205;
     color: #f5741e;
     letter-spacing: 3px;
     transform: scale(0.9);
     transition: all 0.5s ease-in-out; }
+
+.btn-ToC {
+  color: #e7f0eb; }
 
 /* Mixin to create vertical, horizontal or radial gradient */
 /* Usage */
@@ -128,19 +131,22 @@ footer {
   footer p {
     align-items: center; }
 
-.btn {
+.btn, .btn-ToC {
   width: 100px;
   height: 50px;
   cursor: pointer;
   background-color: #f8c925;
   color: #753205;
   letter-spacing: 0; }
-  .btn:hover {
+  .btn:hover, .btn-ToC:hover {
     background-color: #753205;
     color: #f5741e;
     letter-spacing: 3px;
     transform: scale(0.9);
     transition: all 0.5s ease-in-out; }
+
+.btn-ToC {
+  color: #e7f0eb; }
 
 #myCarousel {
   width: 70vw; }
@@ -192,8 +198,10 @@ footer {
   z-index: 100;
   top: 1rem;
   right: 1rem;
-  width: 1rem;
-  height: 1rem;
+  width: 3rem;
+  height: 3rem;
+  border: #506a54 solid 1px;
+  background: #506a54;
   cursor: pointer; }
 
 .xIcon {
@@ -216,6 +224,17 @@ footer {
 
 .showToC {
   transform: translateY(0); }
+
+li {
+  padding: 1rem 0; }
+
+.menuLink {
+  display: inline-block;
+  font-size: 1.2rem;
+  color: #e7f0eb;
+  text-decoration: none; }
+  .menuLink:hover {
+    text-decoration: underline; }
 
 * {
   box-sizing: border-box;
