--- a/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
@@ -3,22 +3,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-.btn, .btn-ToC {
+.btn, .btn-menu, .btn-topic {
   width: 100px;
   height: 50px;
   cursor: pointer;
   background-color: #f8c925;
   color: #753205;
   letter-spacing: 0; }
-  .btn:hover, .btn-ToC:hover {
+  .btn:hover, .btn-menu:hover, .btn-topic:hover {
     background-color: #753205;
     color: #f5741e;
-    letter-spacing: 3px;
-    transform: scale(0.9);
-    transition: all 0.5s ease-in-out; }
+    letter-spacing: 4px;
+    transform: scale(0.99);
+    transition: all 1s ease-in-out; }
 
-.btn-ToC {
-  color: #e7f0eb; }
+.btn-menu {
+  width: 75vw;
+  height: 80px;
+  cursor: pointer;
+  margin: 20px auto;
+  padding: 10px;
+  font-weight: bolder;
+  font-size: 1.2rem; }
+
+.btn-topic {
+  width: 200px;
+  height: 100px;
+  cursor: pointer;
+  margin: 20px;
+  padding: 5px; }
 
 /* Mixin to create vertical, horizontal or radial gradient */
 /* Usage */
@@ -131,34 +144,47 @@ footer {
   footer p {
     align-items: center; }
 
-.btn, .btn-ToC {
+.btn, .btn-menu, .btn-topic {
   width: 100px;
   height: 50px;
   cursor: pointer;
   background-color: #f8c925;
   color: #753205;
   letter-spacing: 0; }
-  .btn:hover, .btn-ToC:hover {
+  .btn:hover, .btn-menu:hover, .btn-topic:hover {
     background-color: #753205;
     color: #f5741e;
-    letter-spacing: 3px;
-    transform: scale(0.9);
-    transition: all 0.5s ease-in-out; }
+    letter-spacing: 4px;
+    transform: scale(0.99);
+    transition: all 1s ease-in-out; }
 
-.btn-ToC {
-  color: #e7f0eb; }
+.btn-menu {
+  width: 75vw;
+  height: 80px;
+  cursor: pointer;
+  margin: 20px auto;
+  padding: 10px;
+  font-weight: bolder;
+  font-size: 1.2rem; }
+
+.btn-topic {
+  width: 200px;
+  height: 100px;
+  cursor: pointer;
+  margin: 20px;
+  padding: 5px; }
 
 #myCarousel {
   width: 70vw; }
   #myCarousel .carousel-indicators {
     border-radius: 50%; }
   #myCarousel .carousel-item {
-    width: 100%;
-    height: 400px; }
+    max-height: 400px; }
   #myCarousel .carousel-caption {
     padding: 5px;
-    color: #f8c925;
-    text-shadow: 1px 2px 2px #753205; }
+    color: #162f21;
+    text-shadow: 1px 2px 4px black;
+    background-color: #e7f0eb; }
 
 #myBtn {
   display: none;
@@ -193,48 +219,10 @@ footer {
     /* light green while hovering the mouse */
     color: #fbe188; }
 
-.ToC {
-  position: fixed;
-  z-index: 100;
-  top: 1rem;
-  right: 1rem;
-  width: 3rem;
-  height: 3rem;
-  border: #506a54 solid 1px;
-  background: #506a54;
-  cursor: pointer; }
-
-.xIcon {
-  display: none; }
-
 .menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #162f21;
-  color: #e7f0eb;
-  transform: translateY(-100%);
-  transition: transform 0.2s;
-  list-style: none;
-  padding-top: 4rem; }
-
-.showToC {
-  transform: translateY(0); }
-
-li {
-  padding: 1rem 0; }
-
-.menuLink {
-  display: inline-block;
-  font-size: 1.2rem;
-  color: #e7f0eb;
-  text-decoration: none; }
-  .menuLink:hover {
-    text-decoration: underline; }
+  margin-bottom: 100px; }
+  .menu .topic {
+    background-color: white; }
 
 * {
   box-sizing: border-box;
@@ -257,5 +245,15 @@ h6 {
 
 p {
   font-family: "Montserrat", sans-serif; }
+
+a {
+  text-decoration: none;
+  color: #753205; }
+  a:hover {
+    color: #f5741e; }
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap; }
 
 /*# sourceMappingURL=mainStyle.css.map */
