--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_buttons.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_buttons.scss
@@ -9,13 +9,28 @@
   &:hover {
     background-color: $brick;
     color: lighten($brick, 30%);
-    letter-spacing: 3px;
-    transform: scale(0.9);
-    transition: all 0.5s ease-in-out;
+    letter-spacing: 4px;
+    transform: scale(0.99);
+    transition: all 1s ease-in-out;
   }
 }
 
-.btn-ToC {
+.btn-menu {
   @extend .btn;
-  color: $ltgreen;
+  width: 75vw;
+  height: 80px;
+  cursor: pointer;
+  margin: 20px auto;
+  padding: 10px;
+  font-weight: bolder;
+  font-size: 1.2rem;
+}
+
+.btn-topic {
+  @extend .btn;
+  width: 200px;
+  height: 100px;
+  cursor: pointer;
+  margin: 20px;
+  padding: 5px;
 }
