--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_sidebar.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_sidebar.scss
@@ -1,49 +1,57 @@
-.ToC {
-  position: fixed;
-  z-index: 100;
-  top: 1rem;
-  right: 1rem;
-  width: 3rem;
-  height: 3rem;
-  border: $mdgreen solid 1px;
-  background: $mdgreen;
-  cursor: pointer;
-}
-.xIcon {
-  display: none;
+/* The sidepanel menu */
+.sidepanel {
+  height: 500px; /* Specify a height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0;
+  right: 0;
+  background-color: $dkgreen; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.3s; /* 0.5 second transition effect to slide in the sidepanel */
+  /* The sidepanel links */
+  &:a {
+    width: 100%;
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    /* When you mouse over the navigation links, change their color */
+    &:hover {
+      color: #f1f1f1;
+    }
+  }
 }
 
-.menu {
-  position: fixed;
+/* Position and style the close button (top right corner) */
+.closebtn {
+  position: absolute;
   top: 0;
-  left: 0;
   right: 0;
-  bottom: 0;
+  font-size: 36px;
+  /* margin-left: 50px; */
+}
+
+/* Style the button that is used to open the sidepanel */
+.openbtn {
   width: 100%;
-  height: 100vh;
+  right: 0;
+  font-size: 20px;
+  cursor: pointer;
   background-color: $dkgreen;
   color: $ltgreen;
-  transform: translateY(-100%);
-  transition: transform 0.2s;
-  list-style: none;
-  padding-top: 4rem;
+  padding: 10px 15px;
+  border: none;
 }
 
-.showToC {
-  transform: translateY(0);
+.openbtn:hover {
+  background-color: #444;
 }
 
-li {
-  padding: 1rem 0;
-}
-
-.menuLink {
-  display: inline-block;
-  font-size: 1.2rem;
+a,
+h3 {
   color: $ltgreen;
-  text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
 }
