--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/mainStyle.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/mainStyle.scss
@@ -4,7 +4,8 @@
 @import "buttons";
 @import "carousel";
 @import "ursStyle";
-@import "sidebar";
+@import "menu";
+
 //base
 * {
   box-sizing: border-box;
@@ -36,4 +37,18 @@ h6 {
 
 p {
   font-family: $readfont;
+}
+
+a {
+  text-decoration: none;
+  color: $brick;
+
+  &:hover {
+    color: lighten($brick, 30%);
+  }
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
 }
