--- a/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
@@ -99,8 +99,7 @@ header {
     overflow: hidden;
     word-wrap: break-word;
     border-right: 3px solid;
-    font-family: monospace;
-    font-size: 1.2em; }
+    font-family: monospace; }
 @keyframes typing {
   from {
     width: 0; } }
