--- a/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/css/mainStyle.css
@@ -99,7 +99,8 @@ header {
     overflow: hidden;
     word-wrap: break-word;
     border-right: 3px solid;
-    font-family: monospace; }
+    font-family: monospace;
+    font-size: 1.2em; }
 @keyframes typing {
   from {
     width: 0; } }
@@ -134,6 +135,10 @@ header {
     transform: translateZ(0);
     letter-spacing: 5px;
     opacity: 1; } }
+.breakbar {
+  height: 300px;
+  content: ""; }
+
 footer {
   width: 100vw;
   position: fixed;
