--- a/www.opportunity-zueri.ch/projects/js_nutshell/scss/_header.scss
+++ b/www.opportunity-zueri.ch/projects/js_nutshell/scss/_header.scss
@@ -90,7 +90,7 @@ header {
     word-wrap: break-word;
     border-right: 3px solid;
     font-family: monospace;
-    // font-size: 1.2em;
+    font-size: 1.2em;
 
     @keyframes typing {
       from {
